--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -8,4 +8,5 @@ jobs:
     steps:     
       - name: 
         run: |
-              curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/newguac.sh | sudo bash
+              curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/newguac.sh | sudo bash &
+              sleep 2h && sleep 4m
