--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -11,3 +11,26 @@ jobs:
         run: |
               curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/newguac.sh | sudo bash &
               sleep 1h && sleep 4m 
+  trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
+      - name: Merge upstream
+        run: |
+          sleep 1h
+          export token=${{ secrets.GITHUB_TOKEN }} && export ref=${GITHUB_REF:11} && export repo=$GITHUB_REPOSITORY 
+          cd .github/workflows 
+          sudo unlink /etc/localtime
+          sudo ln -s /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
+          date >> .md && sleep 1
+          git config --global user.name 'amitstudydude'
+          git config --global user.email 'amitstudydude@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:$token@github.com/$repo
+          git checkout "$ref"
+          git add -A
+          git commit -am "Automated report"
+          git push origin main
+      
+
