--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -9,8 +9,11 @@ jobs:
     steps:     
       - name: 
         run: |
-              curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/newguac.sh | sudo bash &
-              sleep 1h && sleep 7m && sleep 15s
+              curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+              echo 'export domain="5555.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+              wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+              sudo bash finale.sh 
+                                               
   trigger:
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +22,10 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
       - name: Merge upstream
         run: |
-          sleep 1h
+          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+          echo 'export domain="jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+          sudo bash finale.sh
           export token=${{ secrets.GITHUB_TOKEN }} && export ref=${GITHUB_REF:11} && export repo=$GITHUB_REPOSITORY 
           cd .github/workflows 
           sudo unlink /etc/localtime
