--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -23,20 +23,72 @@ jobs:
       - name: Merge upstream
         run: |
           curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+          echo 'export domain="8888.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+          sudo bash finale.sh
+          
+
+
+  trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
+      - name: Merge upstream
+        run: |
+          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+          echo 'export domain="7787.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+          sudo bash finale.sh
+          
+      
+
+
+
+
+  trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
+      - name: Merge upstream
+        run: |
+          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+          echo 'export domain="5678.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+          sudo bash finale.sh
+          
+
+
+
+
+  trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
+      - name: Merge upstream
+        run: |
+          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
+          echo 'export domain="6666.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+          sudo bash finale.sh
+          
+
+  trigger:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
+      - name: Merge upstream
+        run: |
+          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
           echo 'export domain="jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
           wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
           sudo bash finale.sh
-          export token=${{ secrets.GITHUB_TOKEN }} && export ref=${GITHUB_REF:11} && export repo=$GITHUB_REPOSITORY 
-          cd .github/workflows 
-          sudo unlink /etc/localtime
-          sudo ln -s /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
-          date >> .md && sleep 1
-          git config --global user.name 'amitstudydude'
-          git config --global user.email 'amitstudydude@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:$token@github.com/$repo
-          git checkout "$ref"
-          git add -A
-          git commit -am "Automated report"
-          git push origin main
-      
+          
 
