--- a/.github/workflows/Tty.yml
+++ b/.github/workflows/Tty.yml
@@ -10,7 +10,8 @@ jobs:
       - name: 
         run: |
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c "  \
-             curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/tty.sh | sudo bash " 
+             ##curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/tty.sh | sudo bash && \
+             curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ttyd1.sh | sudo bash "
               
                                                
   
