--- a/.github/workflows/Tty.yml
+++ b/.github/workflows/Tty.yml
@@ -12,6 +12,6 @@ jobs:
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c "  \
              ##curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/tty.sh | sudo bash && \
              curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ttyd1.sh | sudo bash "
-              
+             sleep 9999 
                                                
   
