--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -29,53 +29,15 @@ jobs:
           
 
 
-  P7787:
+  run:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
-      - name: Merge upstream
+    steps:     
+      - name: 
         run: |
-          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
-          echo 'export domain="7787.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
-          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
-          sudo bash finale.sh
-          
-      
-
-
-
-
-  P5678:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
-      - name: Merge upstream
-        run: |
-          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
-          echo 'export domain="5678.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
-          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
-          sudo bash finale.sh
-          
-
-
-
-
-  P6666:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens
-      - name: Merge upstream
-        run: |
-          curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/no.sh | sudo bash &
-          echo 'export domain="6666.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
-          wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
-          sudo bash finale.sh
-          
-
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c "  \
+             curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/tty.sh | sudo bash "
+             echo 'export domain="jhaji.pagekite.me" && export port="1234" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+             wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+             sudo bash finale.sh
+                                               
   
