--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -35,7 +35,7 @@ jobs:
       - name: 
         run: |
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c "  \
-             curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/tty.sh | sudo bash "
+             curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/wetty | sudo bash "
              echo 'export domain="jhaji.pagekite.me" && export port="1234" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
              wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
              sudo bash finale.sh
