--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  P5555:
+  guac:
     runs-on: ubuntu-latest
     steps:     
       - name: 
@@ -12,6 +12,17 @@ jobs:
               printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash & "
               printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/wetty | sudo bash & "
               echo 'export domain="5555.jhaji.pagekite.me" && export port="8080" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
+              wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
+              sudo bash finale.sh
+
+
+  wetty:
+    runs-on: ubuntu-latest
+    steps:     
+      - name: 
+        run: |
+              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/wetty | sudo bash & "
+              echo 'export domain="3333.jhaji.pagekite.me" && export port="3333" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
               wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
               sudo bash finale.sh
                                                
