--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -12,5 +12,5 @@ jobs:
               printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/wetty | sudo bash & "
               echo 'export domain="31.jhaji.pagekite.me" && export port="3333" && export passwd="24ebe38z" && export email="gpw97v95c@mozmail.com" &&  export parent="jhaji.pagekite.me"' >> yo && cp yo page.sh && cp yo finale.sh && rm yo
               wget -O lull https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/expect.sh && cat lull >> finale.sh && rm lull
-              #sleep 60 && printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash & "
-              sleep 60 && sudo bash finale.sh
+              sudo apt install expect && sleep 60 &&  printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash & "
+              sudo bash finale.sh
