--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  guac:
-    runs-on: ubuntu-latest
+  interactive:
+    runs-on: ubuntu-latest  
     steps:     
       - name: 
         run: |
-              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/wetty | sudo bash & "
-              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash &>>log.txt & " 
-              sleep 999999999
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash &>>log.txt & " 
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
+
