--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -12,3 +12,11 @@ jobs:
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash &>>log.txt & " 
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
 
+  interactive:
+    runs-on: ubuntu-latest  
+    steps:     
+      - name: 
+        run: |
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
+
+
