--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -12,7 +12,7 @@ jobs:
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash &>>log.txt & " 
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
 
-  interactive:
+  ssh:
     runs-on: ubuntu-latest  
     steps:     
       - name: 
