--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -7,16 +7,6 @@ jobs:
   interactive:
     runs-on: ubuntu-latest  
     steps:     
-      - name: 
-        run: |
-             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash &>>log.txt & " 
-             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
-
-  ssh:
-    runs-on: ubuntu-latest  
-    steps:     
-      - name: 
-        run: |
-             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash "
-
+      - name: new
+        run:  printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/jhajikv-ji/no/main/xrdp.sh | sudo bash "
 
