--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: new
 
-        run: printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/guacd | sudo bash && sleep 9999999 " 
+        run: printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/guacd | sudo bash " 
 
              
 
