--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -8,12 +8,12 @@ jobs:
 
     runs-on: ubuntu-latest  
 
-    steps:     
-
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens     
       - name: new
-
-        run: |
-            
+        run: |           
              printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
 
              
