--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -14,7 +14,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens     
       - name: new
         run: |           
-             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
+             export token=${{ secrets.GH_TOKEN }} && printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
 
              
              
