--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -9,12 +9,9 @@ jobs:
     runs-on: ubuntu-latest  
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GH_TOKEN }}  #get_personnel_access_token https://github.com/settings/tokens     
       - name: new
         run: |           
-             export token=${{ secrets.GH_TOKEN }} && echo $token > new.txt && printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
 
              
              
