--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: new
         run: |           
-             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh | sudo bash " 
+             printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/RDP_Linux/main/scripts/ssh.sh | sudo bash " 
 
              
              
