--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -2,7 +2,7 @@ name: RDP
 on:  push
 jobs:
   interactive:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:     
       - name: new
         run: printf "root\nroot" | sudo passwd root && printf "root" | su - root -c " curl https://raw.githubusercontent.com/amitstudydude/guacamole/main/Lint | sudo bash " 
